--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,11 @@
     /* text-align: center; */
     /* text-transform: uppercase; */
     /* font-family: 'Montserrat', sans-serif; */
-    /* font-weight: 700; */ 
+    /* font-weight: 700; */
 }
 
-.btn:hover, .btn:focus {
+.btn:hover,
+.btn:focus {
     color: #fff;
     /* outline: 0; */
 }
@@ -48,8 +49,50 @@
 }
 
 .canvas {
-    border:2px solid #e0e0e0;
+    border: 2px solid #e0e0e0;
     border-radius: 0.5em;
-    background-color:#f0f0f0;
+    background-color: #f0f0f0;
 }
 
+
+/* Thanks to https://www.w3schools.com/howto/howto_js_rangeslider.asp */
+
+.slider {
+    -webkit-appearance: none;
+    width: 500px;
+    height: 15px;
+    border-radius: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #04AA6D;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background: #04AA6D;
+    cursor: pointer;
+}
+
+.slidercontainer {
+    /* height: 20px; */
+    transform: translateY(+50%);
+}
+
+.buttoncontainer {
+    /* height: 20px; */
+    transform: translateY(+5%);
+}
